--- a/htmls/css/main.css
+++ b/htmls/css/main.css
@@ -962,7 +962,7 @@
   #langLevel .btn {text-transform: capitalize;}
 
   /* Article Pages */
-  #articleHeader {border-bottom: 1px solid #f1f2f1; padding: 5px 0}
+  #articleHeader {border-bottom: 1px solid rgba(0, 0, 0, 0.15); padding: 5px 0}
   #articleHeader #logo {margin: 0}
   #articleHeader .frame {border-radius: 50%; overflow: hidden; width: 32px; height: 32px; display: inline-block; position: relative; top:10px;}
   #articleHeader aside {color:#c4c4c4;}
@@ -972,10 +972,19 @@
   #articlesRows .articlelist li {margin-bottom: 10px; color: #000}
   #articlesRows .articlelist li .checkmark {background: #66be60; border-radius: 50%; height: 25px; width: 25px; text-align: center; line-height: 25px; color: #fff; font-weight: normal; display: none;}
   #articlesRows .articlelist li.read {color:#c4c4c4;}
-  #articlesRows .articlelist li.read .checkmark {display: block;}
+  #articlesRows .articlelist li.read .checkmark {display: block;}  
 
   #sendfeedbackLink a {font-size: 12px; color: #9d9f9f; text-decoration: underline;}
   #sendfeedbackLink a:hover {text-decoration: none;}
+
+
+  /* DropDown menus */
+  #dropdownMenu {cursor: pointer; padding-bottom: 11px}
+  #dropdownMenuTop .dropdown-menu {left: auto; right: 0; top:109%; min-width: 122px; border-radius: 0; border-top: 0; box-shadow: none;}
+  #dropdownMenuTop .dropdown-menu .divider {border: 10px solid #fff; border-width: 0 10px; margin: 0}
+  #dropdownMenuTop .dropdown-menu  > li {text-align: right;}
+  #dropdownMenuTop .dropdown-menu > li > a {padding:5px 10px; color: #c4c4c4}
+  #dropdownMenuTop .dropdown-menu > li > a:hover {color:#000;}
 
 /* ==========================================================================
    19.Small devices (tablets, 768px and up)
