--- a/htmls/css/main.css
+++ b/htmls/css/main.css
@@ -993,7 +993,8 @@
   #articleInfo .source a {text-decoration: underline;}
   #articleInfo .source a:hover {text-decoration: none;}
   #articleDetails #articleHeading {padding: 10px 0 30px; color: #000}
-  #articleDetails #articleBody p {margin-bottom: 30px; color: #000; line-height: 30px}
+  #articleDetails #articleBody {position: relative;}
+  #articleDetails #articleBody .articleContent p {margin-bottom: 30px; color: #000; line-height: 30px}
   #articleDetails .actionpanel .btn {text-transform: capitalize; margin-right: 10px; padding: 6px 12px; font-size: 13px}
   #articleDetails .actionpanel .btn-default.disabled {background: #ccc}
   #articleDetails .actionpanel span {color:#9d9f9f; font-size: 13px}
@@ -1002,6 +1003,13 @@
   #articleReadFooter .switch, #articleReadFooter .actionLabel {display: table-cell; vertical-align: middle;}
   #articleReadFooter .actionLabel {padding-right: 10px; font-weight: normal;}
   #articleReadFooter .switch {padding-right: 20px}
+
+  #definationBox {position: absolute; width: 100%; left: 0; background: #f1f2f1; padding: 10px; border:1px solid #ddd;}
+  #definationBox h3 {font-size: 16px; margin-top:0; color:#f37875;}
+  #definationBox p {font-size: 13px; color: #000; margin: 0}
+  #definationBox span.label {width: 104px; display: inline-block; padding-right: 10px; font-weight: bold}
+  #definationBox .closebtn {font-size: 12px; color: #bbb; cursor: pointer; text-decoration: underline;}
+  #definationBox .closebtn:hover {text-decoration: none;}
 
 /* ==========================================================================
    19.Small devices (tablets, 768px and up)
