--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>YomuLab</title>
+  <title>Yomu Lab</title>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Yomu Lab">
+  <!-- Favicon Icon -->
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300,700" rel="stylesheet">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<body>
+	<%= render "partials/header" %>
+
+  <!-- Why Yomu Lab -->
+  <%= render "partials/why_yomu_lab" %>
+  <!-- End - Why Yomu Lab -->
+
+  <!-- Featured On -->
+  <%= render "partials/yomu_lab_methodology" %>
+  <!-- End - Featured On -->
+
+  <!-- Video Tour -->
+  <%= render "partials/yomu_lab_video_tour" %>
+  <!-- End - Video Tour -->
+
+  <!-- Testimonials -->
+  <%= render "partials/yomu_lab_testimonials" %>
+  <!-- End - Testimonials -->
+
+  <!-- Pricing -->
+  <%= render "partials/yomu_lab_pricing" %>
+  <!-- End - Pricing -->
+
+  <!-- Signup for Yomu Lab Today -->
+  <%= render "partials/yomu_lab_sign_up_today" %>
+  <!-- End - Signup for Yomu Lab Today -->
+
+  <!-- Contact Us -->
+  <%= render "partials/yomu_lab_contact_us" %>
+  <!-- End - Contact Us -->
+
+  <!-- Footer -->
+  <%= render "partials/yomu_lab_footer" %>
+  <!-- End - Footer -->
+
+  <%= yield %>
 
 </body>
 </html>
