Added Pages For SignUp and Login

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -19,8 +19,8 @@
           <li><a href="#contact" lang="en">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" lang="en"><i class="fa fa-sign-in"></i> Login</a></li>
-          <li><a href="#" lang="en" class="btn">SIGN UP</a></li>
+          <li><a href="/Login" lang="en"><i class="fa fa-sign-in"></i> Login</a></li>
+          <li><a href="/SignUp" lang="en" class="btn">SIGN UP</a></li>
         </ul>
       </div>
     </div>
