Addition of AngularJs

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
   <%= render "partials/header" %>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 
   <!-- Why Yomu Lab -->
   <%= render "partials/why_yomu_lab" %>
