--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="yomu_lab">
 
 <head>
   <title>Yomu Lab</title>
@@ -18,7 +18,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body ng-app="YomuLabsCtrl">
 
   <%= yield %>
 
