--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -33,7 +33,7 @@
       <div class="col-md-12">
         <h1 lang="en">Read a Foreign Language, Effortlessly</h1>
         <h2 lang="en">Improve your comprehension with curated and annotated daily readings</h2>
-        <div class="play-btn"> <a href="https://www.youtube.com/watch?v=_uziCZg0_8U" class="play litebox-hero"><img src="/images/play-btn.png" alt="play">
+        <div class="play-btn"> <a href="https://www.youtube.com/watch?v=_uziCZg0_8U" class="play litebox-hero"><img src="/assets/play-btn.png" alt="play">
         <!-- <p>See how you can become fluent. Take a Video Tour</p> -->
         </a> </div>
 
