--- a/app/views/partials/_yomu_lab_methodology.html.erb
+++ b/app/views/partials/_yomu_lab_methodology.html.erb
@@ -12,7 +12,7 @@
 
     <!--feature 1-->
     <div class="row">
-      <div class="col-md-7 col-md-push-5 text-center" style="height: 524px;"> <img src="/images/feature-1.png" alt="feature"> </div>
+      <div class="col-md-7 col-md-push-5 text-center" style="height: 524px;"> <img src="/assets/feature-1.png" alt="feature"> </div>
       <div class="col-md-5 col-md-pull-7">
         <article>
           <h2 lang="en">Curated readings</h2>
@@ -29,7 +29,7 @@
 
     <!--feature 2-->
     <div class="row">
-      <div class="col-md-7 text-center" style="height: 524px;"> <img src="/images/feature-2.png" alt="feature"> </div>
+      <div class="col-md-7 text-center" style="height: 524px;"> <img src="/assets/feature-2.png" alt="feature"> </div>
       <div class="col-md-5">
         <article>
           <h2 lang="en">Frustration free</h2>
@@ -46,7 +46,7 @@
 
     <!--feature 3-->
     <div class="row">
-      <div class="col-md-7 col-md-push-5 text-center" style="height: 524px;"> <img src="/images/feature-3.png" alt="feature"> </div>
+      <div class="col-md-7 col-md-push-5 text-center" style="height: 524px;"> <img src="/assets/feature-3.png" alt="feature"> </div>
       <div class="col-md-5 col-md-pull-7">
         <article>
           <h2 lang="en">Beautiful reading experience</h2>
