--- a/htmls/css/main.css
+++ b/htmls/css/main.css
@@ -994,7 +994,7 @@
   #articleInfo .source a:hover {text-decoration: none;}
   #articleDetails #articleHeading {padding: 10px 0 30px; color: #000}
   #articleDetails #articleBody {position: relative;}
-  #articleDetails #articleBody .articleContent p {margin-bottom: 30px; color: #000; line-height: 30px}
+  #articleDetails #articleBody .articleContent p {margin-bottom: 30px; color: #000; line-height: 34px}
   #articleDetails .actionpanel .btn {text-transform: capitalize; margin-right: 10px; padding: 6px 12px; font-size: 13px}
   #articleDetails .actionpanel .btn-default.disabled {background: #ccc}
   #articleDetails .actionpanel span {color:#9d9f9f; font-size: 13px}
@@ -1010,7 +1010,19 @@
   #definationBox span.label {width: 104px; display: inline-block; padding-right: 10px; font-weight: bold}
   #definationBox .closebtn {font-size: 12px; color: #bbb; cursor: pointer; text-decoration: underline;}
   #definationBox .closebtn:hover {text-decoration: none;}
-
+  .synonyms {position: relative;}
+  .synonyms span {position: absolute; top:-20px; left: 0; font-size: 12px}
+  
+  /** Send Feedback Page **/
+  
+  #sendFeedback {padding-top: 50px}
+  #sendFeedbackHeader {padding-bottom: 50px}
+  #feedbackContent p {font-size: 15px; color: #000}
+  #feedbackContent .textarea {height: 200px}
+  #feedbackFooter {padding-top: 50px}
+  #feedbackFooter .notetext {font-size: 15px}
+  #feedbackContent .submitbtn {padding-left: 30px; padding-right: 30px; text-transform: capitalize;}
+  #feedbackContent .thankyoumessage {margin-bottom: 50px}
 /* ==========================================================================
    19.Small devices (tablets, 768px and up)
    ========================================================================== */
