--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
- */
+*= require bootstrap.min
+*= require font-awesome.min
+*= require font_source_sans_pro
+*= require magnific-popup
+*= require main
+*= require social-sharing
+*= require switch
+*= require_self
+*= require_tree.
+*/
