--- a/app/views/home/sign_up.html.erb
+++ b/app/views/home/sign_up.html.erb
@@ -1,6 +1,5 @@
-
- <!-- Sign up -->
-<section id="signup_Login">
+<!-- Sign up -->
+<section id="signup_Login" ng-controller="YomuLabsSignUpCtrl">
   <div class="container">
     <header id="signupheader">
       <p class="text-center">
@@ -11,37 +10,28 @@
     </header>
 
     <div class="col-sm-6 col-md-4 col-centered">
-      <p id="errorMsg" class="error small">Your password is too short</p>
-      <form>
+      <p id="errorMsg" class="error small" ng-show="error_message != ''">{{message_box}}</p>
+      <form name="signinForm" role="form" class="ng-pristine ng-valid-email ng-invalid ng-invalid-required" novalidate>
         <div class="form-group">
-          <input type="text" placeholder="First Name *" class="form-control" />
+          <input type="text" placeholder="First Name *" class="form-control" ng-model="sign_up_form.first_name" name="first_name" required="required" />
         </div>
         <div class="form-group">
-          <input type="text" placeholder="Last Name *" class="form-control" />
+          <input type="text" placeholder="Last Name *" class="form-control" ng-model="sign_up_form.last_name" name="last_name" required="required" />
         </div>
         <div class="form-group">
-          <input type="text" placeholder="Email *" class="form-control" />
+          <input type="text" placeholder="Email *" class="form-control" ng-model="sign_up_form.email" name="email" required="required" />
         </div>
         <div class="form-group">
-          <input type="text" placeholder="Password *" class="form-control" />
+          <input type="password" placeholder="Password *" class="form-control" ng-model="sign_up_form.password" name="password" required="required" />
         </div>
         <div class="form-group">
-          <input type="text" placeholder="Password Confirmation *" class="form-control" />
+          <input type="password" placeholder="Password Confirmation *" class="form-control" ng-model="sign_up_form.password_confirmation" name="password_confirmation" required="required" />
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-default btn-block submitbtn">Sign Up</button>
+          <button type="submit" ng-click="submit_sign_up_details(sign_up_form);" class="btn btn-default btn-block submitbtn">Sign Up</button>
         </div>
       </form>
-      <footer id="signupfooter">
-        <p class="text-center">Or Sign up with</p>
-        <p class="text-center"> <!-- Facebook -->
-          <a href="https://www.facebook.com/sharer/sharer.php?u=" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
-          <!-- Google+ -->
-          <a href="https://plus.google.com/share?url=" title="Share on Google+" target="_blank" class="btn btn-googleplus"><i class="fa fa-google-plus"></i> Google+</a>
-        </p>
-        <p class="text-center notetext">We will never post to Twitter, Facebook, or<br />
-          Google Plus without your permission.</p>
-      </footer>
+      <%= render "partials/social_sign_footer" %>
     </div>
   </div>
 </section>
