Create and update password pages mock pdf page nos. 25 to 28

--- a/htmls/css/main.css
+++ b/htmls/css/main.css
@@ -1038,6 +1038,12 @@
   #feedbackContent .submitbtn {padding-left: 30px; padding-right: 30px; text-transform: capitalize;}
   #feedbackContent .thankyoumessage {margin-bottom: 50px}
 
+  /*** Admin Wrapper ***/
+  #adminWrapper {min-width: 980px}
+  .steps_top_padding {padding-top: 30px}
+  .stepButton {border: 1px solid #66be60; background: none; color: #66be60; padding: 6px 30px; font-size: 14px; text-transform: capitalize;}
+  .stepButton:hover, .stepButton:focus {border: 1px solid #66be60}
+
   /*** Admin Dashboard ***/
   #adminDashboard {padding-top: 10px}
   #adminDashboard h2 {font-weight: normal; color: #000}
@@ -1049,6 +1055,31 @@
     font-size: 13px;
     padding: 0;
     text-transform: capitalize;}
+
+  /*** Create Article Step 1 ***/  
+  #createarticle_step1 .form-control {border-color:#9b9c9d;}
+  #createarticle_step1 .form-control:focus {border-color:#36bb4d;} 
+  #createarticle_step1 textarea.form-control {height: 200px; padding-top: 10px}  
+  #steps {width: 578px; margin-bottom: 30px}
+  #steps .circle {border: 1px solid #66be60; color: #66be60; width: 60px; height: 60px; border-radius: 50%; line-height: 60px; text-align: center; font-size: 28px; margin-bottom: 10px}
+  #steps .circle.active {background: #66be60; color:#fff;}
+  #steps .line {height: 1px; background: #999898; margin: 30px 18px 0 18px; width: 72px; float: left;}
+  #steps .circleTop {float: left; text-align: center; font-size: 13px}
+
+  /*** Change Password ***/
+  #changePassword {padding-top: 60px}
+  #changePassword .form-control {border-color:#9b9c9d;}
+  #changePassword .form-control:focus {border-color:#36bb4d;} 
+  #changePassword .form-horizontal .control-label {font-weight: normal; text-align: left; color: #999; padding-top: 16px; padding-right: 0}
+  #changePassword .form-horizontal .control-label.password_label {padding-top: 0}
+  #changePassword .actions {padding-top: 30px}
+  #changePassword .actions .btn {padding: 6px 32px; text-transform: capitalize; font-weight: normal; font-size: 13px}
+  #changePassword .cancelBtn {background: #ababab}
+  #changePassword .cancelBtn:hover {background: #9c9b9b}
+  #changePassword form a {color:#3c57a7; text-decoration: underline;}
+  #changePassword form a:hover {text-decoration: none;}
+  #changePassword form input.error {border-color: #f00}
+  
 /* ==========================================================================
    19.Small devices (tablets, 768px and up)
    ========================================================================== */
